# tampExample_fork

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
models/: block_a.urdf  block_b.urdf  block_c.urdf  block_oblong.urdf  caris_block.urdf  mat.urdf  mike_block.urdf
scripts/: panda_scene.py
settings/oblong_push/: error_log.txt  run.py  stream.pddl
settings/oblong_push/temp/: domain.pddl
settings/simple_block/: run.py  stream.pddl
settings/simple_block/temp/: domain.pddl
settings/stacking/: domain_stacking.pddl  run_stacking.py  stream_stacking.pddl
settings/test_case/: domain_testcase.pddl  run_testcase.py  stream_testcase.pddl
settings/test_case/temp/: domain.pddl
src/tampExample/: __init__.py  misc.py  primitives.py
