<?xml version="1.0"?>
<package>
    <name>tampExample</name>
    <version>0.0.0</version>
    <description>
     Example of pick and place with panda using PDDLstream
    </description>
    <url type="repository">https://github.com/rachelholladay/tampExample/</url>
    <maintainer email="rhollada@mit.edu">Rachel Holladay</maintainer>
    <author email="rhollada@mit.edu">Rachel Holladay</author>
    <license>BSD</license>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>python</build_depend>
    <run_depend>python</run_depend>
    <run_depend>python-numpy</run_depend>
    <run_depend>pb_robot</run_depend>
    <run_depend>tsr</run_depend>
</package>
